[package]
name = "nginx-cache-purge"
version = "0.1.11"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/nginx-cache-purge"
homepage = "https://magiclen.org/nginx-cache-purge"
keywords = ["nginx", "cache", "clear", "purge", "delete"]
categories = ["command-line-utilities"]
description = "An alternative way to do `proxy_cache_purge` or `fastcgi_cache_purge` for Nginx."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

md-5 = "0.10"
scanner-rust = "2"
