[package]
name = "nginx-cache-purge"
version = "0.3.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/nginx-cache-purge"
homepage = "https://magiclen.org/nginx-cache-purge"
keywords = ["nginx", "cache", "clear", "purge", "delete"]
categories = ["command-line-utilities"]
description = "An alternative way to do `proxy_cache_purge` or `fastcgi_cache_purge` for Nginx."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

md-5 = "0.10"
scanner-rust = "2"

serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
hyper = { version = "0.14", optional = true }
axum = { version = "0.6", optional = true }

tracing = { version = "0.1", optional = true }
enable-ansi-support = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tower-http = { version = "0.4", features = ["trace", "set-header"], optional = true }

[features]
default = ["service"]
service = ["serde", "tokio", "hyper", "axum", "tracing", "enable-ansi-support", "tracing-subscriber", "tower-http"]